# hulk-compiler

./: .gitignore  CMakeLists.txt  Makefile  Report.md  compiled.asm  hulk  hulk-vm  informe.tex  output
.github/workflows/: ci.yml
include/: ast.hpp  builtins.hpp  bytecode.hpp  code_generator.hpp  environment.hpp  hulk_object.hpp  hulk_range.hpp  hulk_vector.hpp  macro_expander.hpp  runtime_error.hpp  semantic_analyzer.hpp  semantic_context.hpp  semantic_error.hpp  semantic_utils.hpp  serialize.hpp  symbol_table.hpp  type_table.hpp  value.hpp  value_string.hpp  vm.hpp
src/: code_generator.cpp  lexer.l  macro_expander.cpp  main.cpp  parser.y  print_visitor.hpp  semantic_analyzer.cpp  semantic_utils.cpp  serialize.cpp  type_table.cpp  vm.cpp  vm_main.cpp
tests/: bytecode_smoke_test.cpp  codegen_smoke_test.cpp  for_loop_e2e_test.cpp  functor_smoke_test.cpp  lambda_smoke_test.cpp  macro_expander_test.cpp  run_tests.sh  runtime_test.cpp  semantic_analyzer_smoke_test.cpp  semantic_utils_smoke_test.cpp  test_full.hulk  test_macros.hulk  test_match.hulk  type_annotations_smoke_test.cpp  type_table_smoke_test.cpp  vm_smoke_test.cpp
